--- a/index.html
+++ b/index.html
@@ -193,10 +193,13 @@
 	<section id="detail">
 		<div class="container mt-5 text-center">
 			<div class="row justify-content-center">
-				<h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
+                <div class="col-lg-8 col-10">
+                    <h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
+                    <p>Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i. berkenan hadir untuk memberikan do'a serta restunya. Kami ucapkan terimakasih.</p>
+                </div>
 
 				<!-- Akad Nikah -->
-				<div class="col-lg-5 col-10 mb-3" data-aos="flip-up">
+				<div class="col-lg-5 col-10 mt-3" data-aos="flip-up">
 					<div class="card border border-white rounded-4 bg-pink text-white">
 						<div class="card-body">
 
@@ -232,7 +235,7 @@
 				</div>
 
 				<!-- Resepsi -->
-				<div class="col-lg-5 col-10" data-aos="flip-up">
+				<div class="col-lg-5 col-10 mt-3" data-aos="flip-up">
 					<div class="card border border-white rounded-4 bg-secondary text-white">
 						<div class="card-body">
 							
@@ -269,7 +272,7 @@
 
 			</div>
 			<div class="row justify-content-center mt-5">
-				<div class="col-lg-5 col-10">
+				<div class="col-lg-8 col-10">
 					<h2 class="f-sacramento display-1 fw-bold">Lokasi Acara</h2>
 					<p>Alamat: Taman Adiyasa Blok A.18/28 RT.04/RW.05 <br> Kel. Cikasung Kec. Solear Kab. Tangerang</p>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.5097108066425!2d106.42348507316902!3d-6.327933061914359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e420f467ce7fc9b%3A0xf221fd7ca50b519!2sSysNet!5e0!3m2!1sen!2sid!4v1700061823592!5m2!1sen!2sid" width="100%" height="300" class="mt-3" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -354,55 +357,36 @@
 		<div class="container m-auto mb-lg-5 text-center">
 			<h2 class="f-sacramento display-1 fw-bold">Gallery</h2>
 			<div id="myCarousel" class="carousel slide w-75 m-auto" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="4000">
-				<img src="https://placebeard.it/500/500" alt="Image 1" class="w-100 object-fit-cover rounded" style="aspect-ratio: 2/1; object-position: 50% 70%;">
+                <figure class="w-100 mt-3" style="aspect-ratio: 2/1;">
+                    <img src="https://placebeard.it/500/500" alt="Image 1" class="w-100 h-100 object-fit-cover rounded-3" style="object-position: 50% 70%;">
+                </figure>
 				<!-- The slideshow/carousel -->
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/500" alt="Image 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/501" alt="Image 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa2.jpg" alt="Jawa 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/502" alt="Image 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa3.jpg" alt="Jawa 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/503" alt="Image 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/504" alt="Image 5" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
-							</div>
-							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/505" alt="Image 6" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
-							</div>
-							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/506" alt="Image 7" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
-							</div>
-							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/500/507" alt="Image 8" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa4.jpg" alt="Jawa 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 						</div>
 					</div>
@@ -410,24 +394,115 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/501/500" alt="Image 9" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/502/500" alt="Image 10" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa6.jpg" alt="Jawa 6" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/503/500" alt="Image 11" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa7.jpg" alt="Jawa 7" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 							<div class="col mt-4">
-								<div class="ratio ratio-1x1">
-									<img src="https://placebeard.it/504/500" alt="Image 12" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</div>
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa8.jpg" alt="Jawa 8" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+						</div>
+					</div>
+
+					<div class="carousel-item">
+						<div class="row row-cols-2 row-cols-lg-4">
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra1.jpg" alt="Padang 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra2.jpg" alt="Padang 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra3.jpg" alt="Padang 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra4.jpg" alt="Padang 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+						</div>
+					</div>
+
+					<div class="carousel-item">
+						<div class="row row-cols-2 row-cols-lg-4">
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra5.jpg" alt="Padang 5" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra6.jpg" alt="Padang 6" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra7.jpg" alt="Padang 7" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/sumatra8.jpg" alt="Padang 8" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+						</div>
+					</div>
+
+					<div class="carousel-item">
+						<div class="row row-cols-2 row-cols-lg-4">
+                            <div class="col mt-4">
+                                <picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+                                    <img src="./dist/img/gallery/engaged1.jpg" alt="Tunangan 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+                                </picture>
+                            </div>
+                            <div class="col mt-4">
+                                <picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+                                    <img src="./dist/img/gallery/engaged2.jpg" alt="Tunangan 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+                                </picture>
+                            </div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/engaged3.jpg" alt="Tunangan 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture class="rasio-1x1">
+                                    <source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/engaged4.jpg" alt="Tunangan 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								</picture>
 							</div>
 						</div>
 					</div>
@@ -442,6 +517,8 @@
 						<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
 						<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"></button>
 						<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"></button>
+						<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3"></button>
+						<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4"></button>
 					</div>
 						
 					<button class="carousel-control-next position-static" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
@@ -458,29 +535,29 @@
 			
 			<!-- Heading -->
 			<div class="row justify-content-center">
-				<div class="col-md-8 col-12 text-center">
-					<h2>Konfirmasi Kehadiran</h2>
-					<p>Isi form di bawah ini untuk melakukan konfirmasi kehadiran.</p>
+				<div class="col-md-8 col-11 text-center">
+					<h2 class="f-sacramento display-2 fw-bold">Konfirmasi Kehadiran</h2>
+					<p class="mt-3">Isi form di bawah ini untuk melakukan konfirmasi kehadiran.</p>
 				</div>
 			</div>
 
 			<!-- Reservation -->
-			<form action="https://script.google.com/macros/s/AKfycbybBEhobQuw9emQHjEYjPndBPHWvI_5yyUesMGvWjuPI1b78ic9n7OpN_LuD1KNcv60/exec" method="post" class="row row-cols-md-auto g-3 justify-content-center align-items-center">
-				<div class="col-3">
+			<form action="https://script.google.com/macros/s/AKfycbybBEhobQuw9emQHjEYjPndBPHWvI_5yyUesMGvWjuPI1b78ic9n7OpN_LuD1KNcv60/exec" method="post" class="mt-1 row row-cols-md-auto g-3 justify-content-center align-items-center">
+				<div class="col-lg-2 col-7">
 					<div class="mb-3">
 						<label for="nama" class="form-label">Nama</label>
 						<input type="text" class="form-control" id="nama" name="nama" autocomplete="off">
 					</div>
 				</div>
 	
-				<div class="col-2">
+				<div class="col-lg-1 col-3">
 					<div class="mb-3">
 						<label for="jumlah" class="form-label">Jumlah</label>
 						<input type="number" class="form-control" id="jumlah" name="jumlah" min="1" max="5" length="1" value="1">
 					</div>
 				</div>
 	
-				<div class="col-4">
+				<div class="col-lg-2 col-7">
 					<div class="mb-3">
 						<label for="status" class="form-label">Konfirmasi</label>
 						<select name="status" id="status" class="form-select">
@@ -491,7 +568,7 @@
 					</div>
 				</div>
 	
-				<div class="col-2">
+				<div class="col-lg-1 col-3">
 					<label class="form-label"></label>
 					<button class="btn-pink form-control mb-2">Kirim</button>
 				</div>
@@ -499,15 +576,15 @@
 			
 			<!-- Comment Section -->
 			<div class="row mt-3 g-2 justify-content-center align-items-center">
-				<div class="col-lg-6 col-11">
-					<h3>Komentar</h3>
+				<div class="col-lg-6 col-10">
+					<h3>Kirim Pesan dan Ucapan</h3>
 					<form id="commentForm">
 						<div class="form-group">
 							<label for="name" class="form-label">Nama Pengirim</label>
 							<input type="text" class="form-control" id="name" required>
 						</div>
 						<div class="form-group mt-2">
-							<label for="message" class="form-label">Isi Pesan</label>
+							<label for="message" class="form-label">Isi Pesan dan Ucapan</label>
 							<textarea class="form-control" id="message" rows="3" required></textarea>
 						</div>
 						<button type="submit" class="btn btn-pink mt-3">Kirim</button>
@@ -551,7 +628,7 @@
 						<a href="https://wa.me/6287885858654" class="nav-link px-2 text-white"><i class="bi bi-whatsapp"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="" class="nav-link px-2 text-white"><i class="bi bi-twitter"></i></a>
+						<a href="https://t.me/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-telegram"></i></a>
 					</li>
 				</ul>
 			</div>
