--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 	<br>
 
 	<!-- FOOTER -->
-	<footer class="bg-pink">
+	<footer class="bg-pink pb-5 position-relative z-1">
 		<div class="container">
 			<div class="pt-3 mt-4">
 				<p class="text-center text-white border-top pt-3">
@@ -642,7 +642,7 @@
 		<div class="col-6">
 			<div class="row gap-4">
 				<div class="col-12 col-lg-1 p-0">
-					<button class="btn btn-success rasio-1x1 rounded-circle"
+					<button class="btn btn-success rasio-1x1 rounded-circle position-relative z-2"
 						data-bs-toggle="modal" data-bs-target="#modal"
 						data-bs-toggle-2="popover" data-bs-placement="right"
 						data-bs-custom-class="custom-popover"
@@ -654,7 +654,7 @@
 					</button>
 				</div>
 				<div class="col-12 col-lg-1 p-0">
-					<div id="audio-container" class="audio-box">
+					<div id="audio-container" class="position-relative z-2">
 						<audio id="song" loop>
 							<source src="./dist/audio.mp3" type="audio/mp3">
 						</audio>
