--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 						</li>
 
 						<li data-aos="zoom-in">
-							<div class="timeline-image" style="background-image: url(./dist/img/engaged.jpg);"></div>
+							<div class="timeline-image" style="background-image: url(./dist/img/gallery/engaged1.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3>Lamaran</h3>
@@ -309,7 +309,7 @@
 						</li>
 
 						<li class="timeline-inverted" data-aos="zoom-in">
-							<div class="timeline-image" style="background-image: url(https://picsum.photos/325/325);"></div>
+							<div class="timeline-image" style="background-image: url(./dist/img/gallery/sumatra2.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3>Menikah</h3>
@@ -343,16 +343,20 @@
 							width: 100%;
 							height: 100%;
 							object-fit: cover;
-							object-position: 50% 70%;
 							opacity: 0;
 							animation: breathe 5s infinite;
 							display: none;
 						}
 					</style>
-					<img src="https://placebeard.it/500/500" class="thumbnail rounded-3" alt="Image 1">
-					<img src="https://placebeard.it/500/501" class="thumbnail rounded-3" alt="Image 1">
-					<img src="https://placebeard.it/500/502" class="thumbnail rounded-3" alt="Image 1">
-					<img src="https://placebeard.it/500/503" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra2.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra1.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/engaged1.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra3.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra4.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra5.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra6.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra7.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					<img src="./dist/img/gallery/sumatra8.jpeg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
 					<script>
 						const thumbnails = document.querySelectorAll('img.thumbnail');
 						const imageList = Array.from(thumbnails).map(img => img.src);
@@ -375,30 +379,27 @@
 				</figure>
 				<!-- The slideshow/carousel -->
 				<div class="carousel-inner">
+
 					<div class="carousel-item active">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra1.jpg" alt="Sumatera 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 90%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa2.jpg" alt="Jawa 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra2.jpg" alt="Sumatera 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 70%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa3.jpg" alt="Jawa 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra3.jpg" alt="Sumatera 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa4.jpg" alt="Jawa 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra4.jpg" alt="Sumatera 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
 								</picture>
 							</div>
 						</div>
@@ -407,27 +408,52 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra5.jpeg" alt="Sumatera 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa6.jpg" alt="Jawa 6" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra6.jpeg" alt="Sumatera 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa7.jpg" alt="Jawa 7" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<picture>
+									<img src="./dist/img/gallery/sumatra7.jpg" alt="Sumatera 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
+									<img src="./dist/img/gallery/sumatra8.jpeg" alt="Sumatera 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+								</picture>
+							</div>
+						</div>
+					</div>
+
+                    <div class="carousel-item">
+						<div class="row row-cols-2 row-cols-lg-4">
+							<div class="col mt-4">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/jawa8.jpg" alt="Jawa 8" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture>
+									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa2.jpg" alt="Jawa 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture>
+									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa3.jpg" alt="Jawa 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+								</picture>
+							</div>
+							<div class="col mt-4">
+								<picture>
+									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa4.jpg" alt="Jawa 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 						</div>
@@ -436,56 +462,27 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra1.jpg" alt="Padang 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra2.jpg" alt="Padang 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa6.jpg" alt="Jawa 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra3.jpg" alt="Padang 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa7.jpg" alt="Jawa 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra4.jpg" alt="Padang 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</picture>
-							</div>
-						</div>
-					</div>
-
-					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra5.jpg" alt="Padang 5" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</picture>
-							</div>
-							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra6.jpg" alt="Padang 6" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</picture>
-							</div>
-							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra7.jpg" alt="Padang 7" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-								</picture>
-							</div>
-							<div class="col mt-4">
-								<picture class="rasio-1x1">
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/sumatra8.jpg" alt="Padang 8" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/jawa8.jpg" alt="Jawa 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 						</div>
@@ -494,27 +491,27 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/engaged1.jpg" alt="Tunangan 1" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/engaged1.jpg" alt="Tunangan 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/engaged2.jpg" alt="Tunangan 2" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/engaged2.jpg" alt="Tunangan 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/engaged3.jpg" alt="Tunangan 3" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/engaged3.jpg" alt="Tunangan 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 							<div class="col mt-4">
-								<picture class="rasio-1x1">
+								<picture>
 									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-									<img src="./dist/img/gallery/engaged4.jpg" alt="Tunangan 4" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+									<img src="./dist/img/gallery/engaged4.jpg" alt="Tunangan 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</picture>
 							</div>
 						</div>
