--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="row merge mt-2 mb-5" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
 					<!-- <h3>꧁<span class="f-arabic display-3"> ﷽</span>꧂</h3> -->
-					<h2><span class="f-arabic display-2 fw-semibold text-pink"> ﷽</span></h2>
+					<h2><span class="f-arabic display-2 fw-medium text-pink"> ﷽</span></h2>
 					<p>
 						Assalamu’alaikum Warahmatullahi Wabarakatuh
 						<br>
