--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 									<span>3 April 2015</span>
 								</div>
 								<div class="timeline-body">
-									<p>Kami bertemu pada tahun 2015, tepatnya saat kami sedang menempuh pendidikan di SMK yang sama, tidak ada yang pernah menyangka bahwa pertemuan itu membawa kami pada suatu ikatan cinta yang suci hari ini..</p>
+									<p>Kami bertemu pada tahun 2015, tepatnya saat kami sedang menempuh pendidikan di SMK yang sama, tidak ada yang pernah menyangka bahwa pertemuan itu membawa kami pada suatu ikatan cinta yang suci hari ini.</p>
 								</div>
 							</div>
 						</li>
