--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 							<img src="./dist/img/bride.jpg" class="img-responsive rounded-circle w-75" width="200px">
 							<ul class="nav justify-content-center">
 								<li class="nav-item">
-									<a href="https://www.instagram.com/mrxryaa" class="nav-link px-2 text-white"><i class="bi bi-instagram"></i></a>
+									<a href="https://www.instagram.com/arrumhd" class="nav-link px-2 text-white"><i class="bi bi-instagram"></i></a>
 								</li>
 								<li class="nav-item">
 									<a href="https://www.tiktok.com/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-tiktok"></i></a>
