--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@
 			</div>
 			<div class="modal-body">
 				<p>Kehadiran serta doa dan restu anda merupakan hadiah teristimewa. Namun jika ingin mengirimkan sesuatu pada kami, tanpa mengurangi rasa hormat, dapat melalui :</p>
-				<div class="card w-100 mt-2" style="width: 18rem;">
-					<div class="card-header">
+				<div class="card w-100 mt-2 border-0" style="width: 18rem;">
+					<div class="card-header border-0 bg-white">
 						Bank Konvensional
 					</div>
 					<div class="card-body p-0">
@@ -737,7 +737,7 @@
 										<path d="M135.678 17.137C98.411-1.848 53.904-1.32 18.396 16.309c-18.31 32.233-18.893 77.332 0 117.276 39.119 19.796 82.385 18.492 117.557.828 16.53-33.913 19.26-74.721-.275-117.276zm-62.94 96.248l-2.209.025c-.547-6.104-2.006-11.234-5.136-15.16C51.04 80.251 21.7 93.802 29.239 63.213c3.92-15.638 48.633-24.861 43.499 50.172zM29.292 83.173c3.134 6.379 22.769 7.424 29.585 12.307 10.812 7.745 9.26 17.933 9.26 17.933h-2.55c-5.02-15.387-19.109-3.204-30.394-7.348-7.085-2.52-12.229-13.443-5.901-22.892zm35.774 50.161l1.056-8.375 1.9.141-.845 9.219c-.852 4.061-6.907 3.518-7.671-.352l.985-9.571 2.252.353-.985 8.022c.125 2.655 2.788 2.496 3.308.563zm-10.111 2.287l-2.166-.523c.254-1.79 2.377-5.432-1.819-5.432l-1.168 4.76-2.39-.448 2.539-11.427c6.206.676 6.749 2.403 6.872 4.257-.245 1.438-.628 2.442-1.867 2.688 1.45 1.316.017 4.074-.001 6.125zm-13.757-12.799c-.597.792-1.792 3.559-1.965 5.764-.184 2.337 2.061 1.845 2.62 1.572.451-.219.786-2.096.786-2.096l-1.572-.524.524-1.571 3.538 1.179-1.703 5.896-1.441-.394.131-.917c-1.764.804-4.993.201-5.372-1.834-.379-1.635.769-6.592 2.62-8.908 1.799-2.252 6.182-.051 6.289 1.31.106 1.356-.429 2.882-.429 2.882l-1.65-.311s.101-.49.245-1.262c.152-.818-1.981-1.637-2.621-.786zm32.173 9.596l-.422 5.068-1.759-.07.633-12.035c4.393.091 6.911.699 6.827 3.801-.262 4.238-3.694 3.285-5.279 3.236zm4.379-19.006h-2.943c-.261-10.422 1.743-29.485-3.733-43.514-4.149-10.635-14.649-15.419-16.976-24.01-3.684-13.598 2.586-28.311 23.652-29.444 18.263 1.875 23.874 15.974 20.759 29.101-5.356 13.125-10.713 11.239-17.382 24.313-5.447 14.015-3.373 32.376-3.377 43.554zm32.639 19.288l-2.041.704-.634-12.105 2.393-.633 5.912 9.993-1.619 1.056-1.971-2.814-2.252.844.212 2.955zm-23.811-19.288h-2.354c1.94-26.766 35.575-20.951 38.649-30.239 5.316 9.208 3.405 16.972-2.146 20.952-13.794 9.894-27.021-7.322-34.149 9.287zm12.481 13.518l1.056 5.56c.657 1.281 1.103 1.044 2.111.915 1.169-.846.925-1.67.704-2.745l2.041-.281c.532 4.028-1.383 4.439-2.815 4.715-3.071.22-3.673-.378-4.504-4.363-.484-3.411-1.32-7.013 1.548-7.671 4.708-.719 4.43 1.4 4.856 2.885l-2.041.353c-.326-1.276-.795-1.782-1.83-1.688-.943.433-1.33 1.134-1.126 2.32zm-4.293 5.77c.098 1.753-.497 2.917-1.619 3.308l-4.786.985-1.9-11.612c.982-.16 5.797-1.924 6.967 1.268.577 1.949-.021 2.648-.704 3.518 1.295.416 1.732 1.424 2.042 2.533zm-12.29-58.273c10.662-30.02 35.059-24.715 40.47-11.213 7.413 27.093-16.457 19.663-31.747 30.773-5.779 5.026-8.82 10.792-8.865 19.533h-2.62c-.157-17.606-.442-30.073 2.762-39.093z"/>
 									</g>
 								</svg>
-								<p>a/n Arrum Hidayati</p>
+								<p class="mt-3">a/n Arrum Hidayati</p>
 								<label class="copy-content">7111298789</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
@@ -750,7 +750,7 @@
 							</div>
 							<div class="tab-pane fade" id="pills-bni">
 								<img src="https://upload.wikimedia.org/wikipedia/id/5/55/BNI_logo.svg" alt="">
-								<p>a/n Arrum Hidayati</p>
+								<p class="mt-3">a/n Arrum Hidayati</p>
 								<label class="copy-content">1256594765</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
@@ -765,8 +765,8 @@
 					</div>
 				</div>
 				
-				<div class="card w-100 mt-3" style="width: 18rem;">
-					<div class="card-header">
+				<div class="card w-100 mt-3 border-0" style="width: 18rem;">
+					<div class="card-header border-0 bg-white">
 						Bank Digital
 					</div>
 					<div class="card-body p-0">
@@ -780,7 +780,7 @@
 						<div class="tab-content py-3 px-5 bg-secondary text-white text-center" id="pills-tabContent">
 							<div class="tab-pane fade show active" id="pills-dana">
 								<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Logo_dana_blue.svg" alt="" class="w-50">
-								<p>a/n Surya Mauliadi</p>
+								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
@@ -793,7 +793,7 @@
 							</div>
 							<div class="tab-pane fade" id="pills-ovo">
 								<img src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Logo_ovo_purple.svg" alt="" class="w-50">
-								<p>a/n Surya Mauliadi</p>
+								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
@@ -806,7 +806,7 @@
 							</div>
 							<div class="tab-pane fade" id="pills-gopay">
 								<img src="https://seeklogo.com/images/G/gopay-logo-D27C1EBD0D-seeklogo.com.png" alt="" class="w-50">
-								<p>a/n Surya Mauliadi</p>
+								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
@@ -819,7 +819,7 @@
 							</div>
 							<div class="tab-pane fade" id="pills-shopee">
 								<img src="https://seeklogo.com/images/S/shopee-pay-logo-2217CDC100-seeklogo.com.png" alt="" class="w-50">
-								<p>a/n Surya Mauliadi</p>
+								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
@@ -832,7 +832,7 @@
 							</div>
 							<div class="tab-pane fade" id="pills-linkaja">
 								<img src="https://upload.wikimedia.org/wikipedia/commons/8/85/LinkAja.svg" alt="" class="w-25">
-								<p>a/n Surya Mauliadi</p>
+								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
