--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 
 	<!-- COUPLE SECTION -->
 	<section id="couple" class="vh-75" data-aos="zoom-in-up">
-		<div class="container m-auto text-center">
+		<div class="m-auto text-center">
 			<h2 class="f-sacramento display-1 lh-base">Calon Pengantin</h2>
 			<p class="fs-6">Dua jiwa namun satu pikiran, dua hati namun satu perasaan.</p>
-			<div class="row justify-content-center mt-2">
+			<div class="row justify-content-center align-items-center mt-2">
 				<div class="col-lg-5 mt-3" data-aos="zoom-in-right">
 					<div class="row align-items-center">
 						<div class="col-7">
@@ -156,7 +156,7 @@
 					</div>
 				</div>
 				
-				<span class="col-lg-1 mt-4 f-tangerine display-1 fw-light" data-aos="zoom-in">
+				<span class="col-lg-1 f-tangerine fw-light" style="font-size: 6rem;" data-aos="zoom-in">
 					<em>&</em>
 				</span>
 		
