--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	</section>
 
 	<!-- COUPLE SECTION -->
-	<section id="couple" class="vh-75" data-aos="zoom-in-up">
+	<section id="couple" class="vh-75 mb-5" data-aos="zoom-in-up">
 		<div class="m-auto text-center">
 			<h2 class="f-sacramento display-1 lh-base">Calon Pengantin</h2>
 			<p class="fs-6">Dua jiwa namun satu pikiran, dua hati namun satu perasaan.</p>
@@ -137,19 +137,10 @@
 							<img src="./dist/img/groom.jpg" class="img-responsive rounded-circle w-75" width="200px">
 							<ul class="nav justify-content-center">
 								<li class="nav-item">
-									<a href="https://www.instagram.com/mrxryaa" class="nav-link px-2 text-white"><i class="bi bi-instagram"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://www.tiktok.com/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-tiktok"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://www.facebook.com/Hacker1487" class="nav-link px-2 text-white"><i class="bi bi-facebook"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://wa.me/6287885858654" class="nav-link px-2 text-white"><i class="bi bi-whatsapp"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://t.me/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-telegram"></i></a>
+									<a href="https://instagram.com/mrxryaa" class="nav-link px-2 text-white" target="_blank">
+										<i class="bi bi-instagram"></i>
+										<span>@mrxryaa</span>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -166,19 +157,10 @@
 							<img src="./dist/img/bride.jpg" class="img-responsive rounded-circle w-75" width="200px">
 							<ul class="nav justify-content-center">
 								<li class="nav-item">
-									<a href="https://www.instagram.com/arrumhd" class="nav-link px-2 text-white"><i class="bi bi-instagram"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://www.tiktok.com/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-tiktok"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://www.facebook.com/Hacker1487" class="nav-link px-2 text-white"><i class="bi bi-facebook"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://wa.me/6287885858654" class="nav-link px-2 text-white"><i class="bi bi-whatsapp"></i></a>
-								</li>
-								<li class="nav-item">
-									<a href="https://t.me/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-telegram"></i></a>
+									<a href="https://instagram.com/arrumhd" class="nav-link px-2 text-white" target="_blank">
+										<i class="bi bi-instagram"></i>
+										<span>@ArrumHD</span>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -199,7 +181,7 @@
 	
 	<!-- DETAIL SECTION -->
 	<section id="detail">
-		<div class="container mt-5 text-center">
+		<div class="container text-center">
 			<div class="row justify-content-center">
 				<div class="col-lg-8 col-10">
 					<h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
@@ -279,7 +261,7 @@
 				</div>
 
 			</div>
-			<div class="row justify-content-center mt-5">
+			<div class="row justify-content-center my-5">
 				<div class="col-lg-8 col-10">
 					<h2 class="f-sacramento display-1 fw-bold">Lokasi Acara</h2>
 					<p>Alamat: Taman Adiyasa Blok A.18/28 RT.04/RW.05 <br> Kel. Cikasung Kec. Solear Kab. Tangerang</p>
@@ -292,7 +274,7 @@
 
 	<!-- STORY SECTION -->
 	<section id="story">
-		<div class="container">
+		<div class="container mb-lg-5">
 			<div class="row justify-content-center">
 				<div class="col-md-8 col-10 text-center">
 					<h2 class="f-sacramento display-1 fw-bold">Cerita Kami</h2>
@@ -654,23 +636,23 @@
 			<div class="pt-3 mt-4">
 				<p class="text-center text-white border-top pt-3">
 					<span>&copy; 2023 SMArt Wedding, Inc. All Rights Reserved.</span>
-					<span>Design by <a href="https://instagram.com/mrxryaa">@ProSurya</a>.</span>
+					<span>Design by <a href="https://instagram.com/mrxryaa" target="_blank">@ProSurya</a>.</span>
 				</p>
 				<ul class="nav justify-content-center pb-3">
 					<li class="nav-item">
-						<a href="https://www.instagram.com/mrxryaa" class="nav-link px-2 text-white"><i class="bi bi-instagram"></i></a>
+						<a href="https://instagram.com/mrxryaa" class="nav-link px-2 text-white" target="_blank"><i class="bi bi-instagram"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://www.tiktok.com/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-tiktok"></i></a>
+						<a href="https://tiktok.com/@suryamauliadi" class="nav-link px-2 text-white" target="_blank"><i class="bi bi-tiktok"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://www.facebook.com/Hacker1487" class="nav-link px-2 text-white"><i class="bi bi-facebook"></i></a>
+						<a href="https://facebook.com/Hacker1487" class="nav-link px-2 text-white" target="_blank"><i class="bi bi-facebook"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://wa.me/6287885858654" class="nav-link px-2 text-white"><i class="bi bi-whatsapp"></i></a>
+						<a href="https://wa.me/6287885858654" class="nav-link px-2 text-white" target="_blank"><i class="bi bi-whatsapp"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://t.me/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-telegram"></i></a>
+						<a href="https://t.me/@suryamauliadi" class="nav-link px-2 text-white" target="_blank"><i class="bi bi-telegram"></i></a>
 					</li>
 				</ul>
 			</div>
