--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<li class="nav-item">
 									<a href="https://instagram.com/mrxryaa" class="nav-link px-2 text-white" target="_blank">
 										<i class="bi bi-instagram"></i>
-										<span>@mrxryaa</span>
+										<span>mrxryaa</span>
 									</a>
 								</li>
 							</ul>
@@ -159,7 +159,7 @@
 								<li class="nav-item">
 									<a href="https://instagram.com/arrumhd" class="nav-link px-2 text-white" target="_blank">
 										<i class="bi bi-instagram"></i>
-										<span>@ArrumHD</span>
+										<span>ArrumHD</span>
 									</a>
 								</li>
 							</ul>
