--- a/index.html
+++ b/index.html
@@ -361,15 +361,39 @@
 			<div id="myCarousel" class="carousel slide w-75 m-auto" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="4000">
 				<figure class="w-100 mt-3" style="aspect-ratio: 2/1;">
 					<source media="(min-width: 3850px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-					<img src="./dist/img/gallery/sumatra2.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra1.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/engaged1.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra3.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra4.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra5.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra6.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra7.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
-					<img src="./dist/img/gallery/sumatra8.jpeg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					<a href="./dist/img/gallery/sumatra2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra2.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra1.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra1.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/engaged1.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/engaged1.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/engaged2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/engaged2.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/engaged4.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/engaged4.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra3.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra3.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra4.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra4.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra5.jpeg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra5.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra6.jpeg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra6.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra7.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra7.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra8.jpeg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra8.jpeg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
 				</figure>
 				<!-- The slideshow/carousel -->
 				<div class="carousel-inner">
