--- a/index.html
+++ b/index.html
@@ -730,6 +730,16 @@
 									</svg>
 									Salin
 								</button>
+								<p class="mt-3">a/n Surya Mauliadi</p>
+								<label class="copy-content">7621323222</label>
+								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+										<path fill-rule="evenodd"
+											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
+										></path>
+									</svg>
+									Salin
+								</button>
 							</div>
 							<div class="tab-pane fade" id="pills-bni">
 								<img src="https://upload.wikimedia.org/wikipedia/id/5/55/BNI_logo.svg" alt="">
@@ -773,9 +783,29 @@
 									</svg>
 									Salin
 								</button>
+								<p class="mt-3">a/n Arrum Hidayati</p>
+								<label class="copy-content">085172026454</label>
+								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+										<path fill-rule="evenodd"
+											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
+										></path>
+									</svg>
+									Salin
+								</button>
 							</div>
 							<div class="tab-pane fade" id="pills-ovo">
 								<img src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Logo_ovo_purple.svg" alt="" class="w-50">
+								<p class="mt-3">a/n Arrum Hidayati</p>
+								<label class="copy-content">085172026454</label>
+								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+										<path fill-rule="evenodd"
+											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
+										></path>
+									</svg>
+									Salin
+								</button>
 								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
@@ -799,9 +829,29 @@
 									</svg>
 									Salin
 								</button>
+								<p class="mt-3">a/n Arrum Hidayati</p>
+								<label class="copy-content">085172026454</label>
+								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+										<path fill-rule="evenodd"
+											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
+										></path>
+									</svg>
+									Salin
+								</button>
 							</div>
 							<div class="tab-pane fade" id="pills-shopee">
 								<img src="https://seeklogo.com/images/S/shopee-pay-logo-2217CDC100-seeklogo.com.png" alt="" class="w-50">
+								<p class="mt-3">a/n Arrum Hidayati</p>
+								<label class="copy-content">085172026454</label>
+								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+										<path fill-rule="evenodd"
+											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
+										></path>
+									</svg>
+									Salin
+								</button>
 								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
@@ -817,6 +867,16 @@
 								<img src="https://upload.wikimedia.org/wikipedia/commons/8/85/LinkAja.svg" alt="" class="w-25">
 								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
+								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+										<path fill-rule="evenodd"
+											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
+										></path>
+									</svg>
+									Salin
+								</button>
+								<p class="mt-3">a/n Arrum Hidayati</p>
+								<label class="copy-content">085172026454</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
 										<path fill-rule="evenodd"
