--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
 	<section id="detail">
 		<div class="container text-center">
 			<div class="row justify-content-center">
-				<div class="col-lg-8 col-10">
+				<div class="col-lg-8 col-10" data-aos="zoom-in-up">
 					<h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
 					<p>Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i. berkenan hadir untuk memberikan do'a serta restunya. Kami ucapkan terimakasih.</p>
 				</div>
 
 				<!-- Akad Nikah -->
 				<div class="col-lg-5 col-10 mt-3" data-aos="flip-up">
-					<div class="card border border-white rounded-4 bg-pink text-white">
+					<div class="card border border-white rounded-4 bg-secondary text-white">
 						<div class="card-body">
 
 							<h5 class="card-title display-6 f-dancing fw-semibold">Akad Nikah</h5>
@@ -274,7 +274,7 @@
 
 			</div>
 			<div class="row justify-content-center my-5">
-				<div class="col-lg-8 col-10">
+				<div class="col-lg-8 col-10" data-aos="zoom-in-up">
 					<h2 class="f-sacramento display-1 fw-bold">Lokasi Acara</h2>
 					<p>Alamat: Taman Adiyasa Blok A.18/28 RT.04/RW.05 <br> Kel. Cikasung Kec. Solear Kab. Tangerang</p>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.5097108066425!2d106.42348507316902!3d-6.327933061914359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e420f467ce7fc9b%3A0xf221fd7ca50b519!2sSysNet!5e0!3m2!1sen!2sid!4v1700061823592!5m2!1sen!2sid" width="100%" height="300" class="mt-3" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -288,7 +288,7 @@
 	<section id="story">
 		<div class="container mb-lg-5">
 			<div class="row justify-content-center">
-				<div class="col-md-8 col-10 text-center">
+				<div class="col-md-8 col-10 text-center" data-aos="zoom-in-up">
 					<h2 class="f-sacramento display-1 fw-bold">Cerita Kami</h2>
 					<p>Tidak ada yang kebetulan di dunia ini, semua sudah tersusun rapih oleh sang maha kuasa, kita tidak bisa memilih kepada siapa kita akan jatuh cinta.</p>
 				</div>
@@ -299,7 +299,7 @@
 					<ul class="timeline text-black">
 						<li data-aos="zoom-in">
 							<div class="timeline-image" style="background-image: url(./dist/img/first-meet.jpg);"></div>
-							<div class="timeline-panel bg-pink text-white first-child">
+							<div class="timeline-panel text-white">
 								<div class="timeline-heading">
 									<h3>Pertama Bertemu</h3>
 									<span>3 April 2015</span>
@@ -357,9 +357,10 @@
 	<!-- GALLERY -->
 	<section id="gallery">
 		<div class="container m-auto mb-lg-5 text-center">
-			<h2 class="f-sacramento display-1 fw-bold">Gallery</h2>
-			<div id="myCarousel" class="carousel slide w-75 m-auto" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="4000">
-				<figure class="w-100 mt-3" style="aspect-ratio: 2/1;">
+			<h2 class="f-sacramento display-1 fw-bold" data-aos="zoom-in-up">Gallery</h2>
+
+			<div class="row justify-content-center">
+				<figure class="w-75 mt-3" style="aspect-ratio: 2/1;" data-aos="zoom-in-up">
 					<source media="(min-width: 3850px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
 					<a href="./dist/img/gallery/sumatra2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/sumatra2.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
@@ -395,6 +396,9 @@
 						<img src="./dist/img/gallery/sumatra8.jpeg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
 				</figure>
+			</div>
+
+			<div id="myCarousel" data-aos="zoom-in-up" class="carousel slide w-75 m-auto" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="4000">
 				<!-- The slideshow/carousel -->
 				<div class="carousel-inner">
 
