--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 					<ul class="timeline text-black">
 						<li data-aos="zoom-in">
 							<div class="timeline-image" style="background-image: url(./dist/img/first-meet.jpg);"></div>
-							<div class="timeline-panel text-white">
+							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3>Pertama Bertemu</h3>
 									<span>3 April 2015</span>
