--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 			<div class="row merge vh-100" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
 					<h2 class="fs-1 fw-semibold text-pink">QS. Ar-Rum : 21</h2>
-					<h5 class="my-lg-4 f-arabic fs-1 lh-base">
+					<!-- <h5 class="my-lg-4 f-arabic fs-1 lh-base"> -->
+					<h5 class="my-lg-4 f-arabic">
 						وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً ۗ اِنَّ فِيْ ذٰلِكَ لَاٰيٰتٍ لِّقَوْمٍ يَّتَفَكَّرُوْنَ
 					</h5>
 					<p>
