--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<center class="col-lg-10 col-11 m-auto">
 					<h2 class="fs-1 fw-semibold text-pink">QS. Ar-Rum : 21</h2>
 					<!-- <h5 class="my-lg-4 f-arabic fs-1 lh-base"> -->
-					<h5 class="my-lg-4 f-arabic">
+					<h5 class="my-lg-4 f-arabic fs-3 lh-lg">
 						وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً ۗ اِنَّ فِيْ ذٰلِكَ لَاٰيٰتٍ لِّقَوْمٍ يَّتَفَكَّرُوْنَ
 					</h5>
 					<p>
@@ -93,7 +93,7 @@
 			<div class="row merge mt-2 mb-5" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
 					<!-- <h3>꧁<span class="f-arabic display-3"> ﷽</span>꧂</h3> -->
-					<h2><span class="f-arabic display-2 fw-medium text-pink"> ﷽</span></h2>
+					<h2><span class="display-3 fw-medium text-pink"> ﷽</span></h2>
 					<p>
 						Assalamu’alaikum Warahmatullahi Wabarakatuh
 						<br>
