--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h5>The Wedding of</h5>
 			<h1>Surya & Arrum</h1>
 			<p>Kepada Yth.</p>
-			<h3 class="display-5 f-dancing">Kepada <span>Bapak/Ibu/Saudara/i, </span></h3>
+			<h3 class="fs-2 fw-normal">Kepada <span>Bapak/Ibu/Saudara/i, </span></h3>
 			<a id="btnopen" href="#opening" class="btn-outline-pink fw-bold mt-3">
 				Lihat Undangan
 			</a>
