--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <main data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" class="scrollspy-example" tabindex="0">
 	<!-- PRELOADER -->
 	<div style="height: 100vh;transition: height 200ms linear;" class="preloader w-100 fixed-top bg-danger-subtle overflow-hidden d-flex flex-column justify-content-center align-items-center">
-		<img class="animation__shake" src="./dist/img/favicon.svg" alt="AdminLTELogo" height="60" width="60">
+		<img class="animation__shake" src="./dist/img/logo-animation.gif" alt="AdminLTELogo" height="60" width="60">
 	</div>
 
 	<!-- COVER SECTION -->
